fix alignment for partner cards

--- a/app/(pages)/community-partners/page.module.scss
+++ b/app/(pages)/community-partners/page.module.scss
@@ -11,6 +11,13 @@
   overflow: hidden;
 }
 
+.partnersSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--vertical-card-gap);
+}
+
 .header {
   text-align: center;
 }
